--- a/package.json
+++ b/package.json
@@ -1,48 +1,27 @@
 {
-  "name": "admin",
+  "name": "cs-fy-project-admin",
   "version": "0.1.0",
   "private": true,
-  "contributors": [
-    {
-      "name": "bitbender-8"
-    },
-    {
-      "name": "Hemen-S"
-    },
-    {
-      "name": "Bisrat-123652"
-    },
-    {
-      "name": "blackmammoth"
-    }
-  ],
-  "engines": {
-    "node": "22.x"
-  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix",
-    "lint:chk": "next lint",
-    "format": "prettier . --write",
-    "format:chk": "prettier . --check"
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.2.1"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8",
-    "prettier": "3.4.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.1",
+    "@eslint/eslintrc": "^3"
   }
 }
