--- a/package.json
+++ b/package.json
@@ -2,6 +2,27 @@
   "name": "cs-fy-project-admin",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22.x"
+  },
+  "contributors": [
+    {
+      "name": "bitbender-8"
+    },
+    {
+      "name": "Hemen-S"
+    },
+    {
+      "name": "Bisrat-123652"
+    },
+    {
+      "name": "blackmammoth"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/bitbender-8/cs-fy-project-admin.git"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
